add downloadable link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="css-typing">
                 <div class="hello"><p class="w3-jumbo">HELLO!</p></div>
                 <p class="w3-xxlarge">I'm  <strong>ROZHIN BAYATI</strong> </p>
-                <p class="w3-large"> Scroll down to know me better or just view <a href="#"> <strong style="color: black">my resume</strong></a></p>
+                <p class="w3-large"> Scroll down to know me better or just view <a href="lebenslauf.pdf" target="_blank"> <strong style="color: black">my resume</strong></a></p>
             </div>
         </div>
 </header>
