--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
         <div class="footer" >
             <img src="images/emailli.png" alt="email" style="max-width: 50px; alignment: center"><h5>rozhin2025@uni-bonn.de</h5>
             <img src="images/linkedin.png" alt="linkedin" style="max-width: 50px; alignment: center"><a href="https://www.linkedin.com/in/rozhin-bayati/"><h5>linkedin</h5></a>
-            <img src="images/resum.png" alt="resume" style="max-width: 40px; alignment: center"><h5>resume link</h5>
+            <img src="images/resum.png" alt="resume" style="max-width: 40px; alignment: center"><h5><a href="lebenslauf.pdf" target="_blank"> <strong style="color: black">My resume</strong></a></h5>
         </div>
     </div>
     <div class="col-sm-1"></div>
