--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
                 <p><strong>Persian:</strong>Native</p>
                 <canvas class="bar-circle" width="70" height="70"></canvas>
             </div>
-            <div class="bar" data-percent="75">
-                <p><strong>English:</strong>B2</p>
+            <div class="bar" data-percent="80">
+                <p><strong>English:</strong>C1</p>
                 <canvas class="bar-circle" width="70" height="70"></canvas>
             </div>
             <div class="bar" data-percent="75">
