delete resume link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="css-typing">
                 <div class="hello"><p class="w3-jumbo">HELLO!</p></div>
                 <p class="w3-xxlarge">I'm  <strong>ROZHIN BAYATI</strong> </p>
-                <p class="w3-large"> Scroll down to know me better or just view <a href="lebenslauf.pdf" target="_blank"> <strong style="color: black">my resume</strong></a></p>
+                <p class="w3-large"> Scroll down to know me better or just view <a href=""> <strong style="color: black">my resume</strong></a></p>
             </div>
         </div>
 </header>
@@ -388,7 +388,7 @@
         <div class="footer" >
             <img src="images/emailli.png" alt="email" style="max-width: 50px; alignment: center"><h5>rozhin2025@uni-bonn.de</h5>
             <img src="images/linkedin.png" alt="linkedin" style="max-width: 50px; alignment: center"><a href="https://www.linkedin.com/in/rozhin-bayati/"><h5>linkedin</h5></a>
-            <img src="images/resum.png" alt="resume" style="max-width: 40px; alignment: center"><a href="lebenslauf.pdf" target="_blank"><h5>My resume</h5></a>
+            <img src="images/resum.png" alt="resume" style="max-width: 40px; alignment: center"><a href=""><h5>My resume</h5></a>
         </div>
     </div>
     <div class="col-sm-1"></div>
