--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
             <div class="large polaroid img2"><img src="images/read.jpg" alt="">I like reading romantasy novels in my free time.</div>
             <div class="medium polaroid img3"><img src="images/bake.jpg" alt="">I am a food lover and I love to try new recipes and play with spices.</div>
             <div class="medium polaroid img5"><img src="images/dancing.jpg" alt="">Since I come from a multicultural country, I tried to learn so many dances. whenever I hear a music, I jump up and dance:))</div>
-            <div class="polaroid img6"><img src="images/cock.png" alt=""> I love fighting sports I have learned Jujitsu and Im seriosly learning Shaolin Kungfu, Taichi chen and Qigong</div>
+            <div class="polaroid img6"><img src="images/cock.png" alt=""> I love martial atrs. I have learned Jujitsu and Im seriosly learning Shaolin Kungfu, Taichi chen and Qigong</div>
             <div class="polaroid img7"><img src="images/puzzle.jpg" alt="">I like to challenge my self; when I see a puzzle I can't just pass by I have to complete it.</div>
             <div class="small polaroid img8"><img src="images/music.jpg" alt="">Music cheers me up when I'm listening to music I work faster and can't feel how time passes.</div>
             <div class="medium polaroid img10"><img src="images/hike.jpg" alt="">Nothing is better than a hike on weekends.</div>
