correct email address

--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 <div class="w3-light-gray row" style="padding: 50px; padding-left: 150px">
     <div class="col-sm-12"><a id="connect"><h1>Stay Connected<br></h1></a>
         <div class="footer row" >
-            <img src="images/emailli.png" class="col-sm-5" alt="email" style="max-width: 30px; alignment: center; padding: 5px;"><h5>rozhin2025@gamil.com</h5>
+            <img src="images/emailli.png" class="col-sm-5" alt="email" style="max-width: 30px; alignment: center; padding: 5px;"><h5>rozhin2025@gmail.com</h5>
             <img src="images/linkedin.png" class="col-sm-4" alt="linkedin" style="max-width: 30px; alignment: center; padding: 5px;"><a href="https://www.linkedin.com/in/rozhin-bayati/"><h5>linkedin</h5></a>
             <img src="images/resum.png" class="col-sm-4" alt="resume" style="max-width: 30px; alignment: center; padding: 5px;"><a href="images/Yogesh_Patil_s_CV (2).pdf" download=""><h5>My resume</h5></a>
         </div>
